[package]
name = "webmonitor-core"
version = "0.1.0"
authors = ["Jannis Becker <jbecker@jannisbecker.me>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["rt"] }
futures = "0.3.14"

thiserror = "1.0.24"
log = "0.4.0"

serde = "1.0.125"
serde_json = "1.0.64"
mongodb = "2.0.0-alpha.1"

reqwest = "0.11.3"
scraper = "0.12.0"

similar = "1.3.0"