[package]
name = "webmonitor"
version = "0.1.0"
authors = ["Jannis Becker <jbecker@jannisbecker.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webmonitor-core = { path = "../webmonitor-core" }

tokio = { version = "1.5.0", features = ["rt"] }
futures = "0.3.14"

thiserror = "1.0.24"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.3"

serde = "1.0.125"
serde_json = "1.0.64"